--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-slug": "^4.0.1",
+    "swr": "^2.1.5",
     "theme-ui": "^0.15.3"
   },
   "devDependencies": {
