--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/carbonplan/offsets-db-web#readme",
   "dependencies": {
+    "@carbonplan/charts": "^3.0.0",
     "@carbonplan/components": "^12.3.0",
     "@carbonplan/icons": "^2.0.0",
     "@carbonplan/layouts": "^4.0.0",
@@ -29,6 +30,8 @@
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.3.1",
     "@theme-ui/color": "^0.15.3",
+    "d3-brush": "^3.0.0",
+    "d3-selection": "^3.0.0",
     "next": "^12.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
