--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@carbonplan/icons": "^2.0.0",
     "@carbonplan/layouts": "^4.0.0",
     "@carbonplan/theme": "^8.0.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.3.1",
