--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@next/mdx": "^12.3.1",
     "@theme-ui/color": "^0.15.3",
     "d3-brush": "^3.0.0",
+    "d3-format": "^3.1.0",
     "d3-selection": "^3.0.0",
     "next": "^12.0.5",
     "react": "^18.2.0",
