--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "^12.0.5",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-animate-height": "^3.2.2",
     "react-dom": "^18.2.0",
     "rehype-slug": "^4.0.1",
     "swr": "^2.1.5",
