--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "d3-brush": "^3.0.0",
     "d3-format": "^3.1.0",
     "d3-selection": "^3.0.0",
-    "next": "^12.0.5",
+    "lru-cache": "^10.1.0",
+    "next": "^14.0.4",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-animate-height": "^3.2.2",
