--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/carbonplan/offsets-db-web#readme",
   "dependencies": {
     "@carbonplan/charts": "^3.0.0",
-    "@carbonplan/components": "^12.6.3",
+    "@carbonplan/components": "^12.6.5",
     "@carbonplan/emoji": "^2.0.0",
     "@carbonplan/icons": "^2.0.0",
-    "@carbonplan/layouts": "^4.0.0",
+    "@carbonplan/layouts": "^5.0.2",
     "@carbonplan/theme": "^8.0.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -37,7 +37,8 @@
     "d3-brush": "^3.0.0",
     "d3-format": "^3.1.0",
     "d3-selection": "^3.0.0",
-    "next": "^12.0.5",
+    "next": "^14.2.23",
+    "next-plausible": "^3.12.4",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-animate-height": "^3.2.2",
