--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.3.1",
+    "@protomaps/basemaps": "^5.7.0",
     "@theme-ui/color": "^0.15.3",
     "@theme-ui/match-media": "^0.15.3",
     "d3-brush": "^3.0.0",
     "d3-format": "^3.1.0",
     "d3-selection": "^3.0.0",
+    "maplibre-gl": "^5.14.0",
     "next": "^14.2.23",
+    "pmtiles": "^4.3.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-animate-height": "^3.2.2",
